<?xml version="1.0"?>
<package>

  <name>sooyoung_ros</name>

  <version> 0.0.0 </version>

  <description> The sooyoung_ros package</description>

  <maintainer email="moonmous@gmail.com">sooyoung.moon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>

  <run_depend>roscpp</run_depend>
 
  <run_depend>rospy</run_depend>

  <run_depend>std_msgs</run_depend>

</package>
